<resources>
    <string name="app_name">Genesis Vision</string>

    <string name="traders">Traders</string>
    <string name="can_not_load_traders">Can not load traders list</string>
    <string name="can_not_load_gvt">No GVT found</string>

    <string name="deposit">Deposit</string>
    <string name="trades">Trades</string>
    <string name="weeks">Weeks</string>
    <string name="profit">Profit</string>

    <string name="invest">Invest</string>
    <string name="days_left">%1$d days left</string>
    <string name="own_fund_currency">Own fund (%1$s)</string>
    <string name="deposit_currency">Deposit (%1$s)</string>
    <string name="profit_percent">Profit (%)</string>
    <string name="can_not_load_trader_graphics">Can not load trader\'s graphics</string>
    <string name="can_not_load_trader_holders">Can not load trader\'s holders</string>

    <string name="trader_graph">Trader graph</string>
    <string name="token_holders">Token holders</string>
    <string name="tokens">Tokens</string>
    <string name="top">Top</string>

    <string name="enter_token_amount">Enter token amount</string>
    <string name="available_tokens">Available tokens</string>
    <string name="bid_for_one_token">Bid for one token (GVT)</string>
    <string name="buy">Buy</string>

    <string name="amount">Amount</string>
    <string name="max_transaction_fee">Max transaction fee</string>
    <string name="max_total">Max total</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="complete">Complete</string>
    <string name="enter_gvt">If you already have an Ethereum wallet with GVT, enter the\u00A0address\u00A0please</string>
    <string name="ok">OK</string>
</resources>
