<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/trader_profile_info_height"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/availableTokensView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_profile_header"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_tokens"
                style="@style/text_profile_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/bidTokensView"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_profile_header"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bid_for_one_token"
                style="@style/text_profile_title"
                android:maxLines="2"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/amountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_token_amount"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/currencyView"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/buy"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/buy_button"/>
</LinearLayout>