<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/payment_confirmation_item_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/text_items_title"
            android:drawableLeft="@drawable/ic_cash_grey600_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@color/colorFontDark"
            android:textAllCaps="true"
            android:text="@string/amount" />
        <TextView
            android:id="@+id/amountValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/payment_confirmation_item_margin_top"
            android:layout_alignParentRight="true"
            style="@style/text_items_title"
            android:textColor="@color/colorFontDark" />
        <TextView
            android:id="@+id/amountValueUSDView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/amountValueView"
            style="@style/text_items_title" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="@color/colorGrayDivider" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/payment_confirmation_item_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/text_items_title"
            android:drawableLeft="@drawable/ic_ticket_percent_grey600_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@color/colorFontDark"
            android:textAllCaps="true"
            android:text="@string/max_transaction_fee" />
        <TextView
            android:id="@+id/amountFeeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/payment_confirmation_item_margin_top"
            android:layout_alignParentRight="true"
            style="@style/text_items_title"
            android:textColor="@color/colorFontDark" />
        <TextView
            android:id="@+id/amountFeeUSDView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/amountFeeView"
            style="@style/text_items_title" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="@color/colorGrayDivider" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/payment_confirmation_item_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            style="@style/text_items_title"
            android:drawableLeft="@drawable/ic_cash_usd_grey600_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@color/colorFontDark"
            android:textAllCaps="true"
            android:text="@string/max_total" />
        <TextView
            android:id="@+id/amountTotalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/payment_confirmation_item_margin_top"
            android:layout_alignParentRight="true"
            style="@style/text_items_title"
            android:textColor="@color/colorFontDark" />
        <TextView
            android:id="@+id/amountTotalUSDView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/amountTotalView"
            style="@style/text_items_title" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:layout_marginBottom="@dimen/traders_item_margin_vertical"
        android:background="@color/colorGrayDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/rejectBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/trader_profile_button_height"
            android:layout_weight="1"
            style="@style/button_cancel"
            android:text="@string/reject"/>
        <View
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/trader_profile_button_height"
            android:layout_weight="1"
            style="@style/button_confirm"
            android:text="@string/confirm"/>
    </LinearLayout>

</LinearLayout>