<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/daysLeftView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorFontLight"
        android:textSize="@dimen/regular_font_size" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ProgressBar android:id="@+id/loader"
            android:indeterminate="true"
            android:layout_width="@dimen/loader_size"
            android:layout_height="@dimen/loader_size"
            style="?android:attr/progressBarStyle"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/trader_profile_info_height"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/profitView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_profile_header"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profit"
                style="@style/text_profile_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/fundView"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_profile_header"/>
            <TextView
                android:id="@+id/fundTitleView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/own_fund"
                style="@style/text_profile_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/depositView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_profile_header"/>
            <TextView
                android:id="@+id/depositTitleView"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deposit"
                style="@style/text_profile_title"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/trader_profile_button_container_height"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/white">
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/trader_profile_button_height"
            android:layout_centerInParent="true"
            style="@style/button_primary_dark"
            android:text="@string/invest" />
    </RelativeLayout>
</LinearLayout>